--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     body {
       font-family: 'Segoe UI', sans-serif;
       text-align: center;
-      background: linear-gradient(to right, #dff6ff, #c7ecee);
+      background: url('https://upload.wikimedia.org/wikipedia/commons/1/1b/Amboseli_National_Park_Mt_Kilimanjaro.jpg') no-repeat center center fixed;
+      background-size: cover;
       padding: 30px;
+      color: #fff;
+      text-shadow: 1px 1px 2px #000;
     }
     h1 {
-      color: #2c3e50;
+      color: #ffffff;
     }
     .puzzle-container {
       display: flex;
@@ -28,6 +31,8 @@
       width: 40px;
       height: 40px;
       text-transform: uppercase;
+      background-color: rgba(255, 255, 255, 0.8);
+      color: #000;
     }
     .input-container {
       margin-top: 20px;
@@ -55,7 +60,7 @@
   </style>
 </head>
 <body>
-  <h1>🔍 Discover Your Destination</h1>
+  <h1>Discover Your Destination</h1>
   <p>Unscramble the letters to reveal your mystery travel destination!</p>
 
   <div class="puzzle-container" id="puzzle"></div>
@@ -95,11 +100,11 @@
       const guess = document.getElementById("guess").value.toLowerCase();
       const result = document.getElementById("result");
       if (guess === chosenWord) {
-        result.textContent = `✅ Correct! Pack your bags for ${chosenWord.charAt(0).toUpperCase() + chosenWord.slice(1)}!`;
-        result.style.color = "green";
+        result.textContent = `Correct! Pack your bags for ${chosenWord.charAt(0).toUpperCase() + chosenWord.slice(1)}!`;
+        result.style.color = "#00ff00";
       } else {
-        result.textContent = "❌ Try again! That’s not quite right.";
-        result.style.color = "red";
+        result.textContent = "Try again! That’s not quite right.";
+        result.style.color = "#ff4d4d";
       }
     }
   </script>
