--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       font-family: 'Segoe UI', sans-serif;
       text-align: center;
-      background: url('https://upload.wikimedia.org/wikipedia/commons/1/1b/Amboseli_National_Park_Mt_Kilimanjaro.jpg') no-repeat center center fixed;
+      background: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb') no-repeat center center fixed;
       background-size: cover;
       padding: 30px;
       color: #fff;
